Fixed update progress bar not showing

--- a/playmaker/static/app.css
+++ b/playmaker/static/app.css
@@ -27,6 +27,10 @@
   margin:0 20px 20px 20px;
 }
 
+#apk-progress {
+  margin:0 20px 20px 20px;
+}
+
 .apk-buttons > a {
   margin-left: 30px;
 }
